Fix for AV-341: Markets Live: Emojis are displayed next to quotes with no spacing

--- a/src/scss/content.scss
+++ b/src/scss/content.scss
@@ -83,9 +83,8 @@
 			}
 		}
 
-		[alt="Emoticon"],
-		.emoticon {
-			margin: -3px 5px;
+		.webchat-emoticon {
+			margin: -2px 5px;
 		}
 
 		.picture {
